--- a/webmaerd/locale/ru/LC_MESSAGES/django.po
+++ b/webmaerd/locale/ru/LC_MESSAGES/django.po
@@ -189,14 +189,14 @@ msgid ""
 "increase sales level. We deal with modern and professional sites' "
 "development for small and medium business"
 msgstr ""
-
-#: webmaerd/templates/index.html:43
-msgid "Write to us"
-msgstr ""
 "Для любых современных компаний будет полезно иметь свой собственный сайт. "
 "Качественный сайт компании способен повысить узнаваемость вашего бренда, "
 "привлечь новых клиентов и повысить уровень продаж. Мы занимаемся разработкой "
 "современных и профессиональныйх сайтов для малого и среднего бизнеса"
+
+#: webmaerd/templates/index.html:43
+msgid "Write to us"
+msgstr "Напишите нам"
 
 #: webmaerd/templates/index.html:47
 msgid "View Portfolio"
